feat(auth): auth-&-update-swagger
