# internal/handler/customer_handler.go
@@ -27,6 +27,7 @@ func NewCustomerHandler(uc usecase.CustomerUsecase) *CustomerHandler {
 // @Success      201  {object}  dto.CustomerResponse
 // @Failure      400  {object}  map[string]string "invalid request or validation error"
 // @Router       /api/v1/customers [post]
+// @Security     BearerAuth
 func (h *CustomerHandler) Create(c echo.Context) error {
 	var req dto.CreateCustomerRequest
 	if err := c.Bind(&req); err != nil {
@@ -48,6 +49,7 @@ func (h *CustomerHandler) Create(c echo.Context) error {
 // @Success      200  {object}  dto.CustomerResponse
 // @Failure      404  {object}  map[string]string "customer not found"
 // @Router       /api/v1/customers/{id} [get]
+// @Security     BearerAuth
 func (h *CustomerHandler) GetByID(c echo.Context) error {
 	id := c.Param("id")
 	res, err := h.uc.GetByID(c.Request().Context(), id)
